feat: new rule, reverse just like suite bur reverse